# muvi

./: .gitignore  CMakeLists.txt  README.md
kissfft/: kiss_fft.h
src/: AudioHandler.cpp  AudioHandler.h  AudioManager.cpp  AudioManager.h  AudioProcessor.cpp  AudioProcessor.h  FFTProcessor.cpp  FFTProcessor.h  Visualiser.cpp  Visualiser.h  main.cpp
